<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Parse Starter Project</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="use_existing_account">Use Existing Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_ncreate_a_new_account">Don\'t have an account?\nCreate a new account</string>
    <string name="already_have_an_account_nlogin_here">Already have an account?\nLogin Here</string>
    <string name="register">Register</string>
    <string name="users_list">Users List</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
</resources>
